<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:fontFamily="monospace"
                android:text="Work: W = F*d*cosα"
                android:textAlignment="viewStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoW_valueW"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/work" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoW_valueF"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/fuerza" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoW_valueD"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/distancia" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="235dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoW_valueCos"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/cosAlpha"
                        android:text="0"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/tecnoW_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="300dp"
                    android:text="@string/calc"/>

                <TextView
                    android:id="@+id/tecnoW_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="305dp"
                    android:layout_marginStart="190dp"
                    android:fontFamily="monospace"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:fontFamily="monospace"
                android:text="@string/ecFormula"
                android:textAlignment="viewStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoEc_valueEc"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/eCinetica" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoEc_valueM"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/masa" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoEc_valueV"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/v" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/tecnoEc_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="225dp"
                    android:text="@string/calc"/>

                <TextView
                    android:id="@+id/tecnoEc_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="230dp"
                    android:layout_marginStart="190dp"
                    android:fontFamily="monospace"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:fontFamily="monospace"
                android:text="@string/epFormula"
                android:textAlignment="viewStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoEp_valueEp"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/ePotencial" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoEp_valueM"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/masa" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoEp_valueG"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/g"
                        android:text="9.8"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="235dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/tecnoEp_valueH"
                        android:inputType="numberDecimal|numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/altura" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/tecnoEp_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="300dp"
                    android:text="@string/calc"/>

                <TextView
                    android:id="@+id/tecnoEp_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="305dp"
                    android:layout_marginStart="190dp"
                    android:fontFamily="monospace"
                    android:textSize="24sp"
                    android:layout_marginBottom="10dp"/>

            </android.support.v7.widget.CardView>


        </LinearLayout>



    </ScrollView>





</android.support.constraint.ConstraintLayout>